# watcher

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst  parameters.yaml  watcher-api-v1-actionplans.inc  watcher-api-v1-actions.inc  watcher-api-v1-audits.inc  watcher-api-v1-audittemplates.inc  watcher-api-v1-datamodel.inc  watcher-api-v1-goals.inc  watcher-api-v1-scoring_engines.inc  watcher-api-v1-services.inc  watcher-api-v1-strategies.inc  watcher-api-v1-webhooks.inc  watcher-api-versions.inc
devstack/: local.conf.compute  local.conf.controller  override-defaults  plugin.sh  prometheus.yml  settings
devstack/files/: apache-watcher-api.template
devstack/lib/: watcher
devstack/upgrade/: resources.sh  settings  shutdown.sh  upgrade.sh
doc/: dictionary.txt  requirements.txt
doc/ext/: term.py  versioned_notifications.py
doc/notification_samples/: action-cancel-end.json  action-cancel-error.json  action-cancel-start.json  action-create.json  action-delete.json  action-execution-end.json  action-execution-error.json  action-execution-start.json  action-update.json  action_plan-cancel-end.json  action_plan-cancel-error.json  action_plan-cancel-start.json  action_plan-create.json  action_plan-delete.json  action_plan-execution-end.json  action_plan-execution-error.json  action_plan-execution-start.json  action_plan-update.json  audit-create.json  audit-delete.json  audit-planner-end.json  audit-planner-error.json  audit-planner-start.json  audit-strategy-end.json  audit-strategy-error.json  audit-strategy-start.json  audit-update.json  infra-optim-exception.json  service-update.json
doc/source/: architecture.rst  conf.py  config-generator.conf  glossary.rst  index.rst  usage.rst
etc/: openstack-watcher-api.service  openstack-watcher-applier.service  openstack-watcher-decision-engine.service
etc/apache2/: watcher
etc/watcher/: README-watcher.conf.txt  policy.json  watcher-config-generator.conf  watcher.conf  watcher.conf.sample
install-guide/source/: common_configure.rst  common_prerequisites.rst  conf.py  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  verify.rst
playbooks/: generate_prometheus_config.yml  orchestrate-tempest.yaml  pre.yaml
playbooks/templates/: prometheus.yml.j2
rally-jobs/: README.rst  watcher-watcher.yaml
releasenotes/notes/: 2025.1-prelude-8be97eece4e1d1ff.yaml  2025.2-prelude-a9f4c7b2e8d15692.yaml  2026.1-prelude-09557da1a8c6979c.yaml  960265-optional-pool-fields-storage-xml-26701a4ce5e54f2b.yaml  action-plan-cancel-c54726378019e096.yaml  action-plan-versioned-notifications-api-e8ca4f5d37aa5b4b.yaml  action-versioned-notifications-api-ff94fc0f401292d0.yaml  add-baremetal-scoper-9ef23f5fb8f0be6a.yaml  add-fail-options-to-nop-f44f506dc732f2a1.yaml  add-force-field-to-audit-4bcaeedfe27233ad.yaml  add-ha-support-b9042255e5b76e42.yaml  add-instance-metrics-to-prometheus-datasource-9fba8c174ff845e1.yaml  add-name-for-audit-0df1f39f00736f06.yaml  add-plugins-parameters-376eb6b0b8978b44.yaml  add-power-on-off-a77673d482568a8b.yaml  add-retries-nova-calls-32455b6fbf7523f1.yaml  add-scoring-module-fa00d013ed2d614e.yaml  add-start-end-time-for-continuous-audit-52c45052cb06d153.yaml  add-upgrade-check-framework-5bb9693c8a78931c.yaml  add-wsgi-module-support-597f479e31979270.yaml  aetos-datasource-60e50a2338c64c08.yaml  api-call-retry-fef741ac684c58dd.yaml  api-microversioning-7999a3ee8073bf32.yaml  applier-threading-mode-882c79ca8843bc5a.yaml  audit-scoper-for-storage-data-model-cdccc803542d22db.yaml  audit-tag-vm-metadata-47a3e4468748853c.yaml  audit-versioned-notifications-api-bca7738e16954bad.yaml  automatic-triggering-audit-8a9b0540d547db60.yaml  background-jobs-ha-9d3cf3fe356f4705.yaml  blueprint-add-skip-actions-4a5a997dc1133f13.yaml  blueprint-remove-cancel-ongoing-actions-11144f2acb562188.yaml  bp-audit-scope-exclude-project-511a7720aac00dff.yaml  bp-extend-compute-model-attributes-b56bc093e8637bb4.yaml  bug-2098984-zone-migration-instance-not-found-b9ce947dd3e7e020.yaml  bug-2103451-fixes-prometheus-queries-with-multiple-target-0e65d20711d1abe2.yaml  bug-2109494-e5bf401767fa6cd6.yaml  bug-2109722-cb205216d0c1a836.yaml  bug-2110947.yaml  bug-2112100-c1e56173cd29a35e.yaml  bug-2112187-763bae283e0b736d.yaml  (+125 more)
releasenotes/source/: conf.py  index.rst
tools/: test-pre-commit-hooks.sh  test-setup.sh
watcher/: __init__.py  _i18n.py  doc.py  eventlet.py  i18n.py  opts.py  service.py  version.py
watcher/api/: README.md  acl.py  app.py  app.wsgi  config.py  hooks.py  scheduling.py  wsgi.py
watcher/applier/: README.md  base.py  default.py  manager.py  promise.py  rpcapi.py  service.py  service_monitor.py  sync.py
watcher/cmd/: __init__.py  api.py  applier.py  dbmanage.py  decisionengine.py  status.py  sync.py
watcher/common/: base_helper.py  ceilometer.py  ceilometer_helper.py  cinder_helper.py  clients.py  config.py  context.py  exception.py  executor.py  i18n.py  ironic_helper.py  keystone.py  keystone_helper.py  nova.py  nova_helper.py  observable.py  oslo_service_helper.py  paths.py  placement_helper.py  policy.py  rpc.py  rpc_service.py  scheduling.py  service.py  service_manager.py  synchronization.py  utils.py
watcher/conf/: __init__.py  _opts.py  aetos_client.py  api.py  applier.py  ceilometer_client.py  cinder_client.py  clients_auth.py  collector.py  datasources.py  db.py  decision_engine.py  exception.py  glance_client.py  gnocchi_client.py  grafana_client.py  grafana_translators.py  ironic_client.py  keystone.py  keystone_client.py  maas_client.py  models.py  monasca_client.py  neutron_client.py  nova.py  nova_client.py  opts.py  paths.py  placement.py  placement_client.py  planner.py  plugins.py  prometheus_client.py  service.py  utils.py
watcher_tempest_plugin/: README.rst  config.py  infra_optim_clients.py  plugin.py
(+1161 files in other folders)
