[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64.0.0"]
build-backend = "pbr.build"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "S", "UP", "W", "C90"]
ignore = [
    # we only use asserts for type narrowing
    "S101",
    # we do not use random number geneerators for crypto
    "S311",
    # S104 Possible binding to all interfaces
    "S104",
    # S105 Possible hardcoded password assigned to variable"
    "S105",
    # S106 Possible hardcoded password assigned to argument
    "S106",
    # S110 `try`-`except`-`pass` detected, consider logging the exception
    "S110",
]
[tool.ruff.lint.per-file-ignores]
"watcher/tests/*" = ["S"]
"watcher/db/sqlalchemy/alembic/*" = ["E501"]
"doc/*" = ["E501"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 20

[tool.bandit]
exclude_dirs = ['tests']
skips = ['B101', 'B311', 'B320']
